# raktar.py3

./: .gitignore  LICENSE  RAKTAR_APP.bat  README.md  VIKI_APP.bat  pyproject.toml  raktar.py  raktarimport.py  start.sh  szam_megjelenites.py
scripts/: climenu.py  databasesession.py  dbsession.py  filesession.py  gui.py  guidbasemediator.py  itemrecord.py  listboxdatabasemediator.py  logbook.py  logrecord.py  main.py  misc.py  projectnumber.py  raktar.py  record.py  rep.py  stockitemrecord.py  viki_app.py
scripts/gui/: asklocalfloat.py  askprojectnumber.py  controldevice.py  display.py  displaymask.py  gui.py  itemlist.py  itemlistbox.py  itemmask.py  selectiondisplay.py  stockitemform.py  stockitemmask.py  styles.py  title_ui.py  withdraw_gui.py  withdraw_ui.py  withdrawdialog.py
